--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "start": "webpack serve --config config/webpack.dev.js"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mui/material": "^5.2.5",
+    "@react-spring/web": "^9.3.2",
     "core-js": "^3.20.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "5.2.0",
+    "stylis": "^4.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
@@ -32,6 +42,9 @@
     "webpack-dev-server": "^4.6.0",
     "webpack-merge": "^5.8.0"
   },
-  "browserslist": ["> 0.25%", "not dead", "not ie 11"]
+  "browserslist": [
+    "> 0.25%",
+    "not dead",
+    "not ie 11"
+  ]
 }
-
