--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-school-isolated",
+  "name": "places-tracker",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
