--- a/src/manifest.json
+++ b/src/manifest.json
@@ -52,9 +52,9 @@
     }
   ],
   "start_url": "/places-tracker/?source=pwa",
-  "background_color": "#3367D6",
+  "background_color": "#222831",
   "display": "standalone",
   "scope": "/places-tracker/",
-  "theme_color": "#3367D6",
+  "theme_color": "#222831",
   "description": "A place where save & share your favourite locations"
 }
