--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/material": "^5.2.5",
     "@react-spring/web": "^9.3.2",
+    "@reduxjs/toolkit": "^1.7.1",
     "core-js": "^3.20.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
+    "redux": "^4.1.2",
     "stylis": "^4.0.13"
   },
   "devDependencies": {
@@ -35,6 +38,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
     "react-refresh": "^0.11.0",
+    "redux-devtools": "^3.7.0",
     "sass": "^1.45.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
