--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.2.5",
     "@react-spring/web": "^9.3.2",
     "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.27.2",
     "core-js": "^3.20.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
