--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.27.2",
     "core-js": "^3.20.0",
+    "croppie": "^2.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
